--- a/src/app/Components/test/custom-node/custom-node.component.html
+++ b/src/app/Components/test/custom-node/custom-node.component.html
@@ -19,7 +19,6 @@
     [attr.data-testid]="'control-'+control.key"
 ></div>
 <div class="input" *ngFor="let input of data.inputs | keyvalue: sortByIndex" [attr.data-testid]="'input-'+input.key">
-    <button (click)="onDeleteClick()">Удалить</button>
 
     <div
         class="input-socket"
@@ -38,3 +37,4 @@
         data-testid="input-control"
     ></div>
 </div>
+<button style="width: 100px; height: 100px;" (click)="onDeleteClick()">Удалить</button>
