добавил новые методы, работаю над текстом и img

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,10 @@
     <div class="content">
       <div class="menu-left">
         Меню слева
-        <button (click)="addOnClick()">add</button>
+        <button (click)="addOnClick()">add new Node</button>
+        <button (click)="addControltoSelectNode()">controlInSelect </button>
+        <button (click)="addRemoveBtn()">DeleteAdd</button>
+
       </div>
       <div class="rete-container">
         <app-test></app-test>
