--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,10 @@
         <button (click)="addOnClick()">add new Node</button>
         <button (click)="addControltoSelectNode()">controlInSelect </button>
         <button (click)="addRemoveBtn()">DeleteAdd</button>
-
+        <button (click)="addImage()">addImage</button>
+        <!-- <button (click)="addImg()">addImg</button> -->
+        <app-upload-img></app-upload-img>
+        <!-- <app-image-component></app-image-component> -->
       </div>
       <div class="rete-container">
         <app-test></app-test>
