текст и картинки, в тексте надо обьеденить методы

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,9 +7,13 @@
         <button (click)="addControltoSelectNode()">controlInSelect </button>
         <button (click)="addRemoveBtn()">DeleteAdd</button>
         <button (click)="addImage()">addImage</button>
+        <button (click)="addText()">add TextBox</button>
+
+        
         <!-- <button (click)="addImg()">addImg</button> -->
         <app-upload-img></app-upload-img>
         <!-- <app-image-component></app-image-component> -->
+        <app-upload-text></app-upload-text>
       </div>
       <div class="rete-container">
         <app-test></app-test>
