customNode нету но сокет есть теперь.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,8 @@
         <button (click)="addRemoveBtn()">DeleteAdd</button>
         <button (click)="addImage()">addImage</button>
         <button (click)="addText()">add TextBox</button>
+        <button (click)="addOutputControl()">add addOutputControl</button>
+
 
         
         <!-- <button (click)="addImg()">addImg</button> -->
